--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-# Environment Variables
-# Copy this file to .env.local and fill in your values
-
-# API Configuration
-VITE_API_BASE_URL=http://localhost:3000/api
-
-# QR Code Secret (use a strong random string in production)
-VITE_QR_SECRET_KEY=your-secret-key-here-change-in-production
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # App Configuration
 VITE_APP_NAME=خالة العيال
