--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@supabase/supabase-js": "^2.87.0",
             "@tanstack/react-query": "^5.90.11",
             "axios": "^1.13.2",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "html5-qrcode": "^2.3.8",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -64,7 +66,9 @@
             "vite": "6.3.5"
       },
       "scripts": {
-            "dev": "vite",
-            "build": "vite build"
+            "dev": "vite --host",
+            "build": "vite build",
+            "type-check": "tsc --noEmit",
+            "lint": "vite build"
       }
 }
