Chore: Bump version to 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-      "name": "Product Design Document",
-      "version": "0.1.0",
+      "name": "khala-mvp",
+      "version": "1.0.0",
       "private": true,
       "dependencies": {
             "@capacitor/android": "^7.4.4",
